Update website sept 2017

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </div>
                 <div class="col-md-8">
                     <h3>About Me</h3>
-                    <p>My name is Steven Nguyen and I was born and raised in Oxnard, California but currently residing here in Irvine. I am a University of California, Irvine graduate with a BS in Informatics. I chose informatics for it's human centered design curriculum. What I've learned from the major is reflected in the work that I do. I love programming simple, functional apps that solve everyday problems. I am most experienced in front end development, but I don't hesitate to try new things like back end programming, mobile applications, UX design, software design, and project management.</p>
-                    <p>Into self improvement, consciousness, and all things that better your life. Reading, meditation, gym, hiking, learning languages (Japanese, Vietnamese, Chinese), music, cinematics, and cooking (dumplings) are just a few of the things I do when I'm not programming.</p>
+                    <p>My name is Steven Nguyen and I graduated from the University of California, Irvine with a Bachelor’s degree in Informatics. I am interested software test automation and quality assurance. I enjoy this line of work because it is an accumulation of the technical skills required for automation and setting up test environments, communication skills used to interact with various departments, and analyzation and critical thinking skills necessary to implement solutions that will save an immense amount of time.</p>
+                    <p>My hobbies including meditation, reading, working out, learning languages (Japanese and Vietnamese), music, movies, and cooking.</p>
                     <p><a href="projects.html">See some of my projects!</a></p>
                 </div>
             </div>
@@ -92,13 +92,13 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
                       <p>Updated July 2017</p>    
                     </li>
                     <li>
