--- a/languagebuddy.html
+++ b/languagebuddy.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-8">
                     <h3>About Language Buddy</h3>
-                    <p>The idea for Language Buddy comes from my passion for learning languages. I am currently learning Japanese, French, and Vietnamese and while I can organize how I learn on a separate notepad, there are many "novelties" that would be nice. Some ideas I have are to implement the meetup/google maps API to show me where the meetups are in my area for certain language learning groups.</p>
+                    <p>The idea for Language Buddy comes from my passion for learning languages. I am currently learning Japanese and Vietnamese and while I can organize how I learn on a separate notepad, there are many "novelties" that would be nice. Some ideas I have are to implement the meetup/google maps API to show me where the meetups are in my area for certain language learning groups.</p>
                     <p>In addition, I'm at different stages of learning for each language and require different methods of studying. It would be nice just to have one place where I can place/update all my resources.</p>
                     <p><a href="https://github.com/stevennnguyen/languagebuddy">Source</a></p>
                 </div>
@@ -77,13 +77,13 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
                       <p>Updated July 2017</p>    
                     </li>
                     <li>
