--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <h2>Contact</h2>
             <p>School Email: stevennn@uci.edu.com
               <br>Personal Email: steven.nguyen194@gmail.com
-              <br><br><a href="ResumeEarlyJuly2017.pdf">Resume</a>
+              <br><br><a href="SoftwareTestAutomation.pdf">Resume</a>
               <br><a href="http://github.com/stevennnguyen">Github</a>
               <br><a href="https://www.linkedin.com/in/stevennnguyen">LinkedIn</a>
             
@@ -56,13 +56,13 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
                       <p>Updated July 2017</p>    
                     </li>
                     <li>
