--- a/notes.html
+++ b/notes.html
@@ -24,14 +24,14 @@
       </div>
       <div class="container">
         <h1 class="text-center">Notes</h1>
-        <p class="text-center">Because I can be forgetful</p>
+        <p class="text-center">Because I love to learn</p>
       </div>
     </div>
 
     <div class="highlighted-projects">
         <div class="container">
             <h2>Notes</h2>
-            <p>Note that I ever plan to be out of the game for a long period of time but in the case where I happen to, I have this page setup so I can easily transition back into whatever it is that I was doing. For example, while I was in Japan for 3 weeks I came back a little rusty and I wished I had some personal reminders on my workflow.</p>
+            <p>Personal Notes I’ve written to familiarize myself with different technologies.</p>
             <p>
               <a href="notes/git.txt">Git</a>
               <br><a href="notes/tools.txt">Tools</a>
@@ -57,13 +57,13 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
                       <p>Updated July 2017</p>    
                     </li>
                     <li>
