--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,6 @@
     
     <div class="highlighted-projects">
         <div class="container">
-            <h2>Web Development</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="thumbnail">
@@ -72,13 +71,13 @@
                 <div class="col-md-4">
                     <img src="images/steven2resized.jpg" width="78" height="78">
                     <br><br>
-                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Combines education, work experience, and personal drive to create useful and functional applications.</p>
+                    <p class="bio-info">University of California, Irvine Graduate; BS in Informatics. Software Test Automation and Quality Assurance.</p>
                     <p><a href="contact.html">Contact Me</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
                     <li>
-                        <h3><a href="ResumeEarlyJuly2017.pdf">Resume</a></h3>
+                        <h3><a href="SoftwareTestAutomation.pdf">Resume</a></h3>
                       <p>Updated July 2017</p>    
                     </li>
                     <li>
