Updated home page summary.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
                 <div class="col-md-8">
                     <h3>About Me</h3>
-                    <p>My name is Steven Nguyen and I’m a QA Specialist with 3 years of experience working in the real estate and printer management industries. I graduated from UCI in March of 2017 with a BS in Informatics.</p>
-                    <p>I like the variety that the QA field has to offer with plenty of opportunity to specialize in things such as test automation and devops. Long term, I’m looking to get into QA Automation or SDET type roles. In the mean time, I’m honing my skills at work and through personal projects (the ones on this website).</p>
-                    <p>Outside of work, my hobbies include learning foreign languages, ultimate frisbee, disc golf, reading, camping, and hiking.</p>
+                    <p>My name is Steven Nguyen and I’m a QA Specialist with 4 years of experience working in the retail, real estate, and printer management industries. I graduated from UCI in March of 2017 with a BS in Informatics.</p>
+                    <p>I like the variety that the QA field has to offer with plenty of opportunity to branch out into more specialized roles. Long term, I’m looking to get into a team lead or managerial type role. In the mean time, I’m honing my skills at work and through personal projects.</p>
+                    <p>Outside of work, my hobbies include learning foreign languages, DJing, ultimate frisbee, disc golf, reading, camping, and hiking.</p>
                 </div>
             </div>
         </div>
